# MUCHOSpec-ETC

./: .gitignore  ETC.py  ETC_arguments.py  ETC_config.py  ETC_config2.py  ETC_import.py  ETC_main.py  ETC_new.py  ETC_plots.py  ETC_test.py  __init__.py  main.py  path.py  pyproject.toml  requirements.txt  test.py  timer.py
scratch/: ETC-scratch-working.ipynb
src/muchospec_etc/: arguments.py  imports.py  main.py  plots.py
