[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "muchospec-etc"
version = "0.1.0"
description = "MUCHOSpec Exposure Time Calculator"
authors = [{ name = "Charles Shapiro" }]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy>=1.23",
    "scipy==1.9.2",
    "astropy>=5.0",
    "synphot>=1.6",
]

[project.optional-dependencies]
plot = [
    "matplotlib>=3.5"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
muchospec_etc = ["data/**/*"]